# kitchen_led

./: README.md  main.py  pyproject.toml
configs/: kitchen.json  living_room_custain.json
scripts/: get_log.sh  put.sh  reflash.sh  rshell.sh
